--- a/package.json
+++ b/package.json
@@ -9,11 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@fullcalendar/core": "^6.0.2",
+    "@fullcalendar/daygrid": "^6.0.2",
+    "@fullcalendar/react": "^6.0.2",
+    "@fullcalendar/timegrid": "^6.0.2",
+    "@mantine/core": "^5.10.0",
+    "@mantine/hooks": "^5.10.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@next/font": "13.1.1",
+    "@rsuite/icons": "^1.0.2",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.7.1",
+    "rsuite": "^5.24.0",
+    "save": "^2.9.0"
   }
 }
