--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://http//Absidaa.github.io/portfolio",
+  "homepage": "http://Absidaa.github.io/portfolio",
   "name": "middle",
   "version": "0.1.0",
   "private": true,
@@ -13,10 +13,6 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@fullcalendar/core": "^6.0.2",
-    "@fullcalendar/daygrid": "^6.0.2",
-    "@fullcalendar/react": "^6.0.2",
-    "@fullcalendar/timegrid": "^6.0.2",
     "@mantine/core": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
     "@material-ui/core": "^4.12.4",
