--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rsuite/icons": "^1.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "bind": "^0.1.7",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "eslint": "8.30.0",
