--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "next-real-viewport": "^0.7.2",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
